# backend/modules/feedback_management/routes.js
@@ -5,14 +5,15 @@ const express = require('express');
 const router = express.Router();
 
 const feedbackController = require('./controller');
+const authenticateToken = require('../../middlewares/authentication');
 
-
-router.post('/', feedbackController.createFeedback);
-router.get('/', feedbackController.getFeedbacks);
-router.get('/:id', feedbackController.getFeedbackById); 
-router.patch('/:id/upvote', feedbackController.feedbackUpVote);
-
-
-
+router.post('/', authenticateToken, feedbackController.createFeedback);
+router.get('/', authenticateToken, feedbackController.getFeedbacks);
+router.get('/:id', authenticateToken, feedbackController.getFeedbackById);
+router.patch(
+  '/:id/upvote',
+  authenticateToken,
+  feedbackController.feedbackUpVote
+);
 
 module.exports = router;
